samples/_failures_safe/1761078286_c327ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7050ffef.c: In function ‘main’:
./samples/SAFE/__tmp_7050ffef.c:132:16: error: missing terminating " character
  132 |         printf("\n
      |                ^~~
./samples/SAFE/__tmp_7050ffef.c:132:9: error: expected expression at end of input
  132 |         printf("\n
      |         ^~~~~~
./samples/SAFE/__tmp_7050ffef.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7050ffef.c:132:9: error: expected declaration or statement at end of input
